change all the background images

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,21 +11,21 @@ html ,body{
     font-weight: 400;
     /* fontfam  */
     line-height: 1.8rem;
-    background-color: antiquewhite;
+   
 }
 
 .back_img{
-    background : url(/natureimage6.jpg) ;
+    background : url(/Images/bg_1.jpg) ;
     min-height: 100%;
      
 }
 .back_img2{
-    background : url(/sectionimg1.jpg) ;
+    background : url(/Images/bg_2.jpg) ;
     min-height:100%
      
 }
 .back_img3{
-    background : url(/bg1.jpg) ;
+    background : url(/Images/bg_3.jpg) ;
     min-height:100%
      
 }
@@ -60,14 +60,12 @@ html ,body{
 }
 
 .text2{
-    /* background-image: url(/sectionimg1.jpg) ; */
-    background-color: #414350; 
-    border: 3px solid black ;
-    /* background-color: transparent; */
-    color: white ;
+    background-image: url(/Images/sec_bg.jpg) ;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    /* border: 3px solid black ; */
+    color: white;
 }
-.text3{
-    background-color: #414350;
-    color: white ;
-}
+ 
 
