--- a/style.css
+++ b/style.css
@@ -15,17 +15,17 @@ html ,body{
 }
 
 .back_img{
-    background : url(/Images/bg_1.jpg) ;
+    background-image : url(./Images/bg_1.jpg) ;
     min-height: 100%;
      
 }
 .back_img2{
-    background : url(/Images/bg_2.jpg) ;
+    background-image : url(./Images/bg_2.jpg) ;
     min-height:100%
      
 }
 .back_img3{
-    background : url(/Images/bg_3.jpg) ;
+    background-image : url(./Images/bg_3.jpg) ;
     min-height:100%
      
 }
@@ -60,7 +60,7 @@ html ,body{
 }
 
 .text2{
-    background-image: url(/Images/sec_bg.jpg) ;
+    background-image: url(./Images/sec_bg.jpg) ;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
